library scrollbar fixed

--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -31,7 +31,7 @@
     left: 0;
     background-color: #E72F37;
     box-shadow: 2px 2px 50px rgb(204, 204, 204);
-    overflow: scroll;
+    overflow: hidden;
     transform: translateX(-100%);
     transition: all 0.5s ease;
     opacity: 0;
